<resources>
    <string name="app_name">Get Even</string>
    <string name="create_receipt">Neuer Kassenzettel</string>
    <string name="solo_receipt_list">Deine Kassenzettel</string>
    <string name="group_receipt_list">Gruppenzettel</string>
    <string name="statistic">Statisitk</string>
    <string name="settings">Einstellungen</string>
    <string name="logout">Abmelden</string>
    <string name="navigation_drawer_open">Öffne Navigations-Leiste</string>
    <string name="navigation_drawer_close">Schließe Navigations-Leiste</string>
    <string name="group">Gruppe</string>
    <string name="settlement_list">Abrechnungen</string>
    <string name="shopping_list">Einkaufsliste</string>
    <string name="participants">Mitglieder</string>
    <string name="miscellaneous">Sonstiges</string>
    <string name="create_group">Gruppe erstellen</string>
    <string name="no_alerts">keine Benachrichtigungen</string>
    <string name="no_new_alerts">Keine neuen Benachrichtigungen</string>
    <string name="profile_picture">Profilbild</string>
    <string name="later_implementation">Dieses Featuer wird später implementiert</string>
    <string name="details">Details</string>
    <string name="subscribe">Abonnieren</string>
    <string name="refresh">Aktualisieren</string>
    <string name="serverSide_statusCodeText">Ups, da lief wohl etwas schief! Versuche es bitte später erneut.</string>
    <string name="noRessource_statusCodeText">404! Es sind noch keine Daten vorhanden.</string>
    <string name="tab_scan">Scan</string>
    <string name="tab_manual">Manuell</string>
    <string name="scan_instruction">ANWEISUNGEN: \nFotografiere DEUTSCHEN Kassenzettel. \nSobald das Bild bestätigt wurde, beginnt der OCR-Prozess. \nDer Bildschirm kann einige Momente schwarz werden, bis das Ergebnis erscheint.</string>
    <string name="start_camera">Starte Kamera</string>
    <string name="scan_result">Scan-Ergebnis:</string>
</resources>
